[gd_scene load_steps=5 format=3 uid="uid://c5hdckj8g5hgr"]

[ext_resource type="Script" uid="uid://b25g48w0548nx" path="res://UserInterface/prepscreen.gd" id="1_b8vvm"]
[ext_resource type="Texture2D" uid="uid://dmea2egtfxghu" path="res://assets/oldjokes.png" id="3_53j0d"]
[ext_resource type="PackedScene" uid="uid://bnj2j4qkjx7hg" path="res://UserInterface/card_frame.tscn" id="3_f5wmu"]
[ext_resource type="Texture2D" uid="uid://brfc58tyjso7n" path="res://assets/notecard.png" id="5_rlflf"]

[node name="PrepScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_b8vvm")
card_frame = ExtResource("3_f5wmu")

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
tab_alignment = 1
current_tab = 2

[node name="Select Venue" type="Panel" parent="TabContainer"]
visible = false
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
tooltip_text = "Pick a place to go enertain at"
metadata/_tab_index = 0

[node name="Button" type="Button" parent="TabContainer/Select Venue"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -206.0
offset_top = -275.5
offset_right = 206.0
offset_bottom = 274.5
grow_horizontal = 2
grow_vertical = 2
text = "Only Venue"

[node name="MinEquipAlert" type="Panel" parent="TabContainer/Select Venue"]
layout_mode = 0
offset_left = 682.0
offset_top = 187.0
offset_right = 1194.0
offset_bottom = 582.0

[node name="Label" type="Label" parent="TabContainer/Select Venue/MinEquipAlert"]
layout_mode = 0
offset_left = 61.0
offset_top = 45.0
offset_right = 461.0
offset_bottom = 161.0
text = "You need at least 5 joke cards to enertain people, or people will think you're just a guest that wanted attention. Which... you are... but you're more practiced than the rest of them... right?"
autowrap_mode = 3

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Select Venue/MinEquipAlert"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.24400002
anchor_top = 0.349
anchor_right = -0.24400002
anchor_bottom = 0.349
offset_left = 173.92801
offset_top = 55.36499
offset_right = 591.928
offset_bottom = 237.36499

[node name="ManageButton" type="Button" parent="TabContainer/Select Venue/MinEquipAlert/HBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 3
text = "Manage Routine"
icon_alignment = 1
expand_icon = true

[node name="ShopButton" type="Button" parent="TabContainer/Select Venue/MinEquipAlert/HBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 3
text = "Writer's Room"
icon_alignment = 1
expand_icon = true

[node name="Manage Routine" type="Panel" parent="TabContainer"]
visible = false
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
tooltip_text = "Put together a routine for where you want to go"
metadata/_tab_index = 1

[node name="SplitContainer" type="VSplitContainer" parent="TabContainer/Manage Routine"]
layout_mode = 0
offset_right = 1239.0
offset_bottom = 1040.0
split_offset = 500

[node name="Joke Inventory" type="ScrollContainer" parent="TabContainer/Manage Routine/SplitContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Manage Routine/SplitContainer/Joke Inventory"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="TabContainer/Manage Routine/SplitContainer/Joke Inventory/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Inventory"
horizontal_alignment = 1

[node name="GridContainer" type="GridContainer" parent="TabContainer/Manage Routine/SplitContainer/Joke Inventory/VBoxContainer"]
layout_mode = 2
columns = 10

[node name="Equipped" type="ScrollContainer" parent="TabContainer/Manage Routine/SplitContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Manage Routine/SplitContainer/Equipped"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="TabContainer/Manage Routine/SplitContainer/Equipped/VBoxContainer"]
layout_mode = 2
text = "Your Hand"
horizontal_alignment = 1

[node name="GridContainer" type="GridContainer" parent="TabContainer/Manage Routine/SplitContainer/Equipped/VBoxContainer"]
layout_mode = 2
columns = 10

[node name="InfoPanel" type="Panel" parent="TabContainer/Manage Routine"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -667.0
offset_top = -522.0
offset_bottom = 522.0
grow_horizontal = 0
grow_vertical = 2

[node name="JokeInfo" type="Panel" parent="TabContainer/Manage Routine/InfoPanel" groups=["JokeInfoBox"]]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Manage Routine/InfoPanel/JokeInfo"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Manage Routine/InfoPanel/JokeInfo/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="JokeNumber" type="Label" parent="TabContainer/Manage Routine/InfoPanel/JokeInfo/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Joke Number"

[node name="Joke" type="Label" parent="TabContainer/Manage Routine/InfoPanel/JokeInfo/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Joke"
autowrap_mode = 3

[node name="PunchlineHider" type="FoldableContainer" parent="TabContainer/Manage Routine/InfoPanel/JokeInfo/VBoxContainer/VBoxContainer"]
layout_mode = 2
folded = true
title = "Punchline"

[node name="Punchline" type="Label" parent="TabContainer/Manage Routine/InfoPanel/JokeInfo/VBoxContainer/VBoxContainer/PunchlineHider"]
visible = false
layout_mode = 2
text = "Punchline"

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Manage Routine/InfoPanel/JokeInfo/VBoxContainer"]
layout_mode = 2

[node name="BonusAttributes" type="Label" parent="TabContainer/Manage Routine/InfoPanel/JokeInfo/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Bonus Attributes"

[node name="OffenseAttributes" type="Label" parent="TabContainer/Manage Routine/InfoPanel/JokeInfo/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Offense Attributes"

[node name="SkillInfo" type="Panel" parent="TabContainer/Manage Routine/InfoPanel"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Writer\'s Room" type="Panel" parent="TabContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
tooltip_text = "Buy cue cards and abilities"
metadata/_tab_index = 2

[node name="BeginnerPanel" type="Panel" parent="TabContainer/Writer\'s Room"]
visible = false
layout_mode = 0
offset_left = 682.0
offset_top = 187.0
offset_right = 1194.0
offset_bottom = 802.0

[node name="Label" type="Label" parent="TabContainer/Writer\'s Room/BeginnerPanel"]
layout_mode = 0
offset_left = 49.0
offset_top = 27.0
offset_right = 449.0
offset_bottom = 266.0
text = "	Welcome to the Writer's Room!
I see it's your first time....
The writer's room is where you can pay your way to Hollywood standup

	However, the writers don't work for free. You'll have to steal some jokes to get started.

	OH you have 2Â¢? You should have said something. That's just enough for a Starter Pack"
autowrap_mode = 3

[node name="StarterButton" type="Button" parent="TabContainer/Writer\'s Room/BeginnerPanel/Label"]
texture_filter = 1
layout_mode = 0
offset_left = -3.0
offset_top = 281.0
offset_right = 411.0
offset_bottom = 569.0
icon = ExtResource("3_53j0d")
icon_alignment = 1
expand_icon = true

[node name="PanelContainer" type="PanelContainer" parent="TabContainer/Writer\'s Room"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="GridContainer" type="GridContainer" parent="TabContainer/Writer\'s Room/PanelContainer"]
layout_mode = 2

[node name="Buy1Joke" type="Button" parent="TabContainer/Writer\'s Room/PanelContainer/GridContainer"]
layout_mode = 2
text = "Get 1 Random Joke"
icon = ExtResource("5_rlflf")
icon_alignment = 1
vertical_icon_alignment = 0

[node name="BuySet2" type="Button" parent="TabContainer/Writer\'s Room/PanelContainer/GridContainer"]
layout_mode = 2
text = "Buy set 2"
icon = ExtResource("5_rlflf")
icon_alignment = 1
vertical_icon_alignment = 0

[connection signal="tab_selected" from="TabContainer" to="." method="_on_tab_container_tab_selected"]
[connection signal="pressed" from="TabContainer/Select Venue/Button" to="." method="_on_venue_button_pressed"]
[connection signal="pressed" from="TabContainer/Select Venue/MinEquipAlert/HBoxContainer/ManageButton" to="." method="_on_manage_button_pressed"]
[connection signal="pressed" from="TabContainer/Select Venue/MinEquipAlert/HBoxContainer/ShopButton" to="." method="_on_shop_button_pressed"]
[connection signal="pressed" from="TabContainer/Writer\'s Room/BeginnerPanel/Label/StarterButton" to="." method="_on_starter_button_pressed"]
[connection signal="pressed" from="TabContainer/Writer\'s Room/PanelContainer/GridContainer/Buy1Joke" to="." method="_on_buy_1_joke_pressed"]
[connection signal="pressed" from="TabContainer/Writer\'s Room/PanelContainer/GridContainer/BuySet2" to="." method="_on_buy_set_2_pressed"]
